design home page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,8 +6,12 @@
 <title>Home Page</title>
 </head>
 <body>
-	<section>
-		<h1>This is home page</h1>
+	<section class="banner d-flex justify-content-center align-items-center">
+		<div class="text-center">
+			<h1>UbiquiTACTS</h1>
+			<p>Manage your phone dairy right here</p>
+			<button class="btn bg-primary btn-lg mt-5 text-white">Get Started</button>
+		</div>
 	</section>
 
 </body>
