--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,17 @@
-body{
-	background: #e2e2e2!important;
+body {
+	background: #e2e2e2 !important;
+	overflow: hidden;
+}
+
+.bg-primary {
+	background: #bb9cd9 !important;
+}
+
+.banner {
+	width: 100%;
+	height: 102vh;
+	background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url(../images/banner-img.jpg);
+	color: white;
+	background-size: cover;
+	margin-top: -9vh;
 }
