--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -15,7 +15,6 @@
 
 <link rel="stylesheet" th:href="@{css/style.css}" />
 
-<title th:text="${pageTitle}">Hello, world!</title>
 </head>
 <body>
 
@@ -29,12 +28,14 @@
 				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse ml-auto d-flex justify-content-end" id="navbarSupportedContent">
+			<div
+				class="collapse navbar-collapse ml-auto d-flex justify-content-end"
+				id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto text-uppercase">
 					<li class="nav-item"><a class="nav-link active"
 						aria-current="page" href="#">Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-					
+
 					<li class="nav-item"><a class="nav-link">Login</a>
 					<li class="nav-item"><a class="nav-link" href="/sign-up">Signup</a>
 					</li>
