--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org"
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
 	th:replace="base::layout(~{::section})">
 <head>
 <meta charset="UTF-8" />
@@ -7,7 +7,87 @@
 </head>
 <body>
 	<section>
-		<h1>This is Signup page</h1>
+		<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+  <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+    <path
+				d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+  </symbol>
+  <symbol id="exclamation-triangle-fill" fill="currentColor"
+				viewBox="0 0 16 16">
+    <path
+				d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+  </symbol>
+</svg>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 offset-md-3">
+					<div class="my-card">
+
+						<!-- alert incase of failed processing -->
+						<div th:if="${session.message}"
+							th:classappend="${session.message.type}"
+							class="alert alert-dismissible fade show text-center"
+							role="alert" th:with="message = ${session.message.type}">
+							<svg th:if="${session.message.type} =='alert-success'"
+								class="bi flex-shrink-0 me-2 " width="24" height="24" role="img"
+								aria-label="Success:">
+								<use xlink:href="#check-circle-fill" /></svg>
+							<svg th:unless="${session.message.type} =='alert-success'"
+								class="bi flex-shrink-0 me-2" width="24" height="24"
+								role="img" aria-label="Danger:">
+								<use xlink:href="#exclamation-triangle-fill" /></svg>
+							<button type="button" class="btn-close" data-bs-dismiss="alert"
+								aria-label="Close"></button>
+							<p th:text="${session.message.content}" class="text-center"></p>
+						</div>
+						<img style="width: 50px" class="mx-auto d-block"
+							src="/images/sign-up.png">
+						<h1 class="text-center">Signup here</h1>
+						<form action="" th:action="@{/do_register}" method="post"
+							th:object=${user}>
+
+							<!-- name field -->
+							<div class="mb-3">
+								<label for="name_field" class="form-label">Name</label> <input
+									type="text" class="form-control" id="name_field" name="name"
+									placeholder="Enter Full name" th:value="${user.name}"
+									required="required">
+							</div>
+							<!-- email field -->
+							<div class="mb-3">
+								<label for="email_field" class="form-label">Email</label> <input
+									type="email" class="form-control" id="email_field" name="email"
+									placeholder="Enter email-id" th:value="${user.email}"
+									required="required">
+							</div>
+							<!-- password field -->
+							<div class="mb-3">
+								<label for="password_field" class="form-label">Password</label>
+								<input type="password" class="form-control" id="password_field"
+									name="password" placeholder="Enter Password">
+							</div>
+							<!-- user-about field -->
+							<div class="form-group mb-2">
+								<textarea rows="8" th:value="${user.about}" name="about"
+									placeholder="Enter something about yourself"
+									th:text="${user.about}" class="form-control"></textarea>
+							</div>
+							<div
+								class="mb-3 form-group form-check d-flex justify-content-center">
+								<input type="checkbox" name="agreement" class="form-check-input"
+									id="tnc_field"> <label class="mx-2 form-check-label"
+									for="tnc_field"> Accept terms and conditions</label>
+							</div>
+							<div class="container text-center btn-group">
+								<button class="btn text-white" style="background: #40bf80">Submit</button>
+								<button class="btn bg-warning text-white ">Reset</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</section>
 
 </body>
