--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -48,8 +48,8 @@
 							src="/images/sign-up.png">
 						<h1 class="text-center">Signup here</h1>
 
-						<form novalidate="novalidate" action=""
-							th:action="@{/do_register}" method="post" th:object=${user}>
+						<form id="myform" action="" th:action="@{/do_register}"
+							method="post" th:object=${user}>
 
 							<!-- name field -->
 							<div class="mb-3">
@@ -79,8 +79,8 @@
 										class="input-group-text"> <i class="far fa-eye"
 										id="togglePassword" style="cursor: pointer"></i>
 									</span>
-								<div class="invalid-feedback"
-									th:each="e : ${#fields.errors('password')}" th:text="${e}"></div>
+									<div class="invalid-feedback"
+										th:each="e : ${#fields.errors('password')}" th:text="${e}"></div>
 								</div>
 							</div>
 							<!-- user-about field -->
@@ -94,11 +94,11 @@
 								<input type="checkbox" name="agreement" class="form-check-input"
 									id="tnc_field"> <label class="mx-2 form-check-label"
 									for="tnc_field"> Accept terms and conditions</label>
-									
+
 							</div>
 							<div class="container text-center btn-group">
-								<button class="btn text-white" style="background: #40bf80">Submit</button>
-								<button class="btn bg-warning text-white ">Reset</button>
+								<button type="submit" class="btn text-white" style="background: #40bf80">Submit</button>
+								<button type="reset" class="btn bg-warning text-white resetBtn">Reset</button>
 							</div>
 						</form>
 					</div>
