--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -3,7 +3,7 @@
 	th:replace="base::layout(~{::section})">
 <head>
 <meta charset="UTF-8" />
-<title>About</title>
+<title></title>
 </head>
 <body>
 	<section>
