--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -20,7 +20,7 @@
 	crossorigin="anonymous" />
 
 <link rel="stylesheet" th:href="@{css/style.css}" />
-
+<title th:text="${pageTitle}"></title>
 </head>
 <body>
 
