--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	th:fragment="layout(content)">
 <head>
 <!-- Required meta tags -->
@@ -39,15 +40,18 @@
 				id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto text-uppercase">
 					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="#">Home</a></li>
+						aria-current="page" href="/">Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="/about">About</a></li>
 
-					<li class="nav-item"><a class="nav-link">Login</a>
 					<li class="nav-item"><a class="nav-link" href="/sign-up">Signup</a>
-					</li>
+					<li sec:authorize="isAuthenticated()" class="nav-item"><a
+						class="nav-link" href="/logout">Logout</a></li>
+					<li sec:authorize="isAnonymous()" class="nav-item"><a
+						class="nav-link" href="/sign-in">Login</a></li>
 				</ul>
 			</div>
-		</div>
+
+			</ div>
 	</nav>
 	<!-- end of navbar -->
 
