--- a/src/main/resources/templates/normal/user_dashboard.html
+++ b/src/main/resources/templates/normal/user_dashboard.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	th:replace="base::layout(~{::section})">
 <head>
 <meta charset="UTF-8" />
 <title>User Dashboard</title>
 </head>
 <body>
-
-	<h1>Welcome user!</h1>
-	<h1>This is your private dashboard</h1>
-
+	<section>
+		<h1>Welcome user!</h1>
+		<h1>This is your private dashboard</h1>
+	</section>
 </body>
 </html>
