--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@
 					<div class="row">
 
 						<div class="col-md-8 offset-md-2">
-							<form action="" th:action="@{sign-in}" method="post">
+							<form action="" th:action="@{/dologin}" method="post">
 								<h3 class="mb-4">Login here</h3>
 
 								<div th:if="${param.error}" class="alert alert-danger">
