--- a/src/main/resources/templates/normal/user_dashboard.html
+++ b/src/main/resources/templates/normal/user_dashboard.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<section>
-		<h1>Welcome <span th:text="${user.name}"></span>!</h1>
+<!-- 		<h1>Welcome <span th:text="${user.name}"></span>!</h1> -->
 		<h1>This is your private dashboard</h1>
 	</section>
 
