--- a/src/main/resources/static/user/css/style.css
+++ b/src/main/resources/static/user/css/style.css
@@ -28,14 +28,15 @@ body {
 @media only screen and (max-width:600px) {
 	.sidebar {
 		display: none;
-		width: 80%!important;
+		width: 80% !important;
 		background: white;
 		height: 100%;
 		position: fixed;
 		padding-top: 20px;
+		margin-top: 40px !important;
 	}
 	.content {
-		margin-left: 0%important;;
+		margin-left: 0% important;;
 	}
 }
 
@@ -45,6 +46,7 @@ body {
 	height: 100%;
 	position: fixed;
 	padding-top: 45px;
+	z-index: 1000;
 }
 
 .sidebar a {
@@ -65,16 +67,22 @@ body {
 	background: #e2e2e2;
 	margin-top: 10px;
 } */
-
-.sidebar .crossBtn{
+.sidebar .crossBtn {
 	position: absolute;
 	top: 17px;
-	right: 35px;
-	font-size: 30px;
+	right: 21px;
+	font-size: 23px;
 	text-align: right;
 	cursor: pointer;
 }
 
 .content {
 	margin-left: 20%;
+	margin-top: 4%;
+}
+
+/* disable card bg for add contact page*/
+.add_contact {
+	background: rgba(0, 0, 0, 0);
+	border: none;
 }
