--- a/src/main/resources/templates/normal/userBase.html
+++ b/src/main/resources/templates/normal/userBase.html
@@ -33,9 +33,13 @@
 <body>
 
 	<!-- navbar -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-light bg-primary">
+	<nav
+		class="navbar navbar-expand-lg navbar-dark bg-light bg-primary fixed-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">UbiquiTACTS</a>
+			<i onclick="toggleSideBar()"
+				class="fas fa-bars mx-3 menuBar navbar-nav"
+				style="cursor: pointer; color: white;"></i> <a class="navbar-brand"
+				href="#">UbiquiTACTS</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 				aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -48,8 +52,7 @@
 				<ul class="navbar-nav ml-auto text-uppercase">
 					<li class="nav-item"><a class="nav-link active"
 						aria-current="page" href="/">Home</a></li>
-					<li class="nav-item"><a class="nav-link"
-						th:text="${user.name}" href="#"></a>
+					<li class="nav-item"><a class="nav-link" href="#"></a> <!-- th:text="${user.name}"  -->
 					<li sec:authorize="isAuthenticated()" class="nav-item"><a
 						class="nav-link" href="/logout">Logout</a></li>
 				</ul>
@@ -58,16 +61,15 @@
 			</ div>
 	</nav>
 	<!-- end of navbar -->
-
 	<!-- sidebar -->
 	<div class="sidebar">
 		<i class="fas fa-times crossBtn" onclick="toggleSideBar()"></i> <a
-			href="#" class="item"><i class="fas fa-home"></i> Home</a> <a
-			href="#" class="item"><i class="fas fa-user-circle"></i> My
-			Profile</a> <a href="#" class="item"><i class="fas fa-id-card-alt"></i>
-			View Contacts</a> <a href="#" class="item"><i
+			href="/user/dashboard" class="item"><i class="fas fa-home"></i>
+			Home</a> <a href="#" class="item"><i class="fas fa-user-circle"></i>
+			My Profile</a> <a href="#" class="item"><i class="fas fa-id-card-alt"></i>
+			View Contacts</a> <a href="/user/add-contact" class="item"><i
 			class="fas fa-user-edit"></i> Add Contacts</a> <a href="#" class="item"><i
-			class="fas fa-user-cog"></i> Settings</a> <a href="#" class="item"><i
+			class="fas fa-user-cog"></i> Settings</a> <a href="/logout" class="item"><i
 			class="fas fa-sign-out-alt"></i> Logout</a>
 		<div class="divider"></div>
 	</div>
@@ -75,7 +77,6 @@
 
 	<!-- content -->
 	<div class="content">
-		<i onclick="toggleSideBar()" class="fas fa-bars m-3 menuBar" style="cursor: pointer;display: none;"></i>
 		<div th:insert="${content}" class="mt-3 ml-3"></div>
 	</div>
 	<!-- end of content -->
@@ -95,6 +96,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
 	<script th:src="@{js/script.js}"></script>
+
 
 </body>
 </html>
