--- a/src/main/resources/templates/normal/add_contact_form.html
+++ b/src/main/resources/templates/normal/add_contact_form.html
@@ -24,28 +24,28 @@
 								<!-- first name  -->
 								<div class="input-group mb-3">
 									<span class="input-group-text"> <i class="fa fa-plus"></i>
-									</span> <input type="text" id="firstName" name="name"
+									</span> <input type="text" id="firstName" name="name" th:value="${contact.name}"
 										placeholder="Enter Name here" class="form-control">
 								</div>
 
 								<!-- second name  -->
 								<div class="input-group mb-3">
 									<span class="input-group-text"> <i class="fa fa-user"></i>
-									</span> <input type="text" id="firstName" name="name"
+									</span> <input type="text" id="nickName" name="nickName" th:value="${contact.nickName}"
 										placeholder="Enter Nick-name here" class="form-control">
 								</div>
 
 								<!-- phone number -->
 								<div class="input-group mb-3">
 									<span class="input-group-text"> <i class="fas fa-phone"></i>
-									</span> <input type="number" id="phone" name="phone"
+									</span> <input type="number" id="phone" name="phone" th:value="${contact.phone}"
 										placeholder="Enter Phone number here" class="form-control">
 								</div>
 
 								<!-- email -->
 								<div class="input-group mb-3">
 									<span class="input-group-text"> <i class="fas fa-at"></i>
-									</span> <input type="email" id="email" name="email"
+									</span> <input type="email" id="email" name="email" th:value="${contact.email}"
 										placeholder="Enter Email ID here" class="form-control">
 								</div>
 
@@ -53,19 +53,19 @@
 								<div class="input-group mb-3">
 									<span class="input-group-text"> <i
 										class="fas fa-briefcase"></i>
-									</span> <input type="text" id="work" name="work"
+									</span> <input type="text" id="work" name="work" th:value="${contact.work}"
 										placeholder="Enter work here" class="form-control">
 								</div>
 
 								<!-- contact image field -->
 								<div class="mb-3">
-									<input class="form-control" type="file" id="formFile">
+									<input class="form-control" type="file" id="formFile" name="image">
 								</div>
 
 								<!-- contact description -->
 								<div class="input-group mb-4">
 									<textarea rows="10" cols="" name="description" id="description"
-										class="form-control"
+										class="form-control" th:value="${contact.description}"
 										placeholder="Enter contact description here"></textarea>
 								</div>
 
