--- a/src/main/resources/templates/normal/add_contact_form.html
+++ b/src/main/resources/templates/normal/add_contact_form.html
@@ -18,7 +18,7 @@
 					<div class="row">
 						<div class="col-md-8 offset-md-2">
 							<form action="#" th:object="${contact}"
-								enctype="mutipart/form-data" method="post"
+								enctype="multipart/form-data" method="post"
 								th:action="@{/user/process-contact}" class="mt-2">
 
 								<!-- first name  -->
@@ -59,7 +59,7 @@
 
 								<!-- contact image field -->
 								<div class="mb-3">
-									<input class="form-control" type="file" id="formFile" name="image">
+									<input class="form-control" type="file" id="formFile" name="profileImage">
 								</div>
 
 								<!-- contact description -->
