--- a/src/main/resources/templates/normal/add_contact_form.html
+++ b/src/main/resources/templates/normal/add_contact_form.html
@@ -12,7 +12,10 @@
 		<div class="card add_contact">
 			<div class="card-body">
 				<img style="width: 50px" class="mx-auto d-block"
-							src="/images/add-contact.png">
+					src="/images/add-contact.png">
+
+				<div th:replace="alert::alertSection"></div>
+
 				<h1 class="text-center">Add Contact</h1>
 				<div class="container-fluid mt-4">
 					<div class="row">
@@ -24,42 +27,50 @@
 								<!-- first name  -->
 								<div class="input-group mb-3">
 									<span class="input-group-text"> <i class="fa fa-plus"></i>
-									</span> <input type="text" id="firstName" name="name" th:value="${contact.name}"
-										placeholder="Enter Name here" class="form-control">
+									</span> <input type="text" id="firstName" name="name"
+										th:value="${contact.name}" placeholder="Enter Name here"
+										class="form-control" required="required">
 								</div>
 
 								<!-- second name  -->
 								<div class="input-group mb-3">
 									<span class="input-group-text"> <i class="fa fa-user"></i>
-									</span> <input type="text" id="nickName" name="nickName" th:value="${contact.nickName}"
+									</span> <input type="text" id="nickName" name="nickName"
+										th:value="${contact.nickName}"
 										placeholder="Enter Nick-name here" class="form-control">
 								</div>
 
 								<!-- phone number -->
 								<div class="input-group mb-3">
 									<span class="input-group-text"> <i class="fas fa-phone"></i>
-									</span> <input type="number" id="phone" name="phone" th:value="${contact.phone}"
-										placeholder="Enter Phone number here" class="form-control">
+									</span> <input maxlength="10" type="tel" pattern="[0-9]{10}"
+										title="format : 9123456789" id="phone" name="phone"
+										th:value="${contact.phone}"
+										placeholder="Enter Phone number here" class="form-control"
+										required="required">
 								</div>
 
 								<!-- email -->
 								<div class="input-group mb-3">
 									<span class="input-group-text"> <i class="fas fa-at"></i>
-									</span> <input type="email" id="email" name="email" th:value="${contact.email}"
-										placeholder="Enter Email ID here" class="form-control">
+									</span> <input type="email" id="email" name="email"
+										th:value="${contact.email}" placeholder="Enter Email ID here"
+										class="form-control">
 								</div>
 
 								<!-- work -->
 								<div class="input-group mb-3">
 									<span class="input-group-text"> <i
 										class="fas fa-briefcase"></i>
-									</span> <input type="text" id="work" name="work" th:value="${contact.work}"
-										placeholder="Enter work here" class="form-control">
+									</span> <input type="text" id="work" name="work"
+										th:value="${contact.work}" placeholder="Enter work here"
+										class="form-control">
 								</div>
 
 								<!-- contact image field -->
 								<div class="mb-3">
-									<input class="form-control" type="file" id="formFile" name="profileImage">
+									<input class="form-control" type="file" id="formFile"
+										name="profileImage">
 								</div>
 
 								<!-- contact description -->
