pagination for contact listing

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,7 +35,7 @@
 								<div class="mb-3">
 									<label for="name_field" class="form-label">Name</label> <input
 										type="text" class="form-control" id="name_field"
-										name="username" placeholder="Enter Full name"
+										name="username" placeholder="Enter Full name" value="hunny@gmail.com"
 										required="required">
 									<div class="invalid-feedback"></div>
 								</div>
@@ -43,7 +43,7 @@
 								<div class="mb-3">
 									<label for="password_field" class="form-label">Password</label>
 									<div class="input-group">
-										<input type="password" name="password" class="form-control"
+										<input type="password" name="password" class="form-control" value="Shivani@1512"
 											id="password_field" placeholder="Enter Password"> <span
 											class="input-group-text"> <i class="far fa-eye"
 											id="togglePassword" style="cursor: pointer"></i>
