--- a/src/main/resources/templates/normal/add_contact_form.html
+++ b/src/main/resources/templates/normal/add_contact_form.html
@@ -9,7 +9,7 @@
 <body>
 	<section>
 
-		<div class="card add_contact">
+		<div class="card user_section">
 			<div class="card-body">
 				<img style="width: 50px" class="mx-auto d-block"
 					src="/images/add-contact.png">
@@ -55,7 +55,7 @@
 									<span class="input-group-text"> <i class="fas fa-at"></i>
 									</span> <input type="email" id="email" name="email"
 										th:value="${contact.email}" placeholder="Enter Email ID here"
-										class="form-control">
+										class="form-control" required="required">
 								</div>
 
 								<!-- work -->
