--- a/src/main/resources/templates/normal/userBase.html
+++ b/src/main/resources/templates/normal/userBase.html
@@ -27,7 +27,7 @@
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-<link rel="stylesheet" th:href="@{css/style.css}" />
+<link rel="stylesheet" th:href="@{/css/style.css}" />
 <title th:text="${pageTitle}"></title>
 </head>
 <body>
@@ -65,11 +65,11 @@
 	<!-- sidebar -->
 	<div class="sidebar">
 		<i class="fas fa-times crossBtn" onclick="toggleSideBar()"></i> <a
-			href="/user/dashboard" class="item"><i class="fas fa-home"></i>
+			th:href="@{/user/dashboard}" href="" class="item"><i class="fas fa-home"></i>
 			Home</a> <a href="#" class="item"><i class="fas fa-user-circle"></i>
-			My Profile</a> <a href="#" class="item"><i class="fas fa-id-card-alt"></i>
-			View Contacts</a> <a href="/user/add-contact" class="item"><i
-			class="fas fa-user-edit"></i> Add Contacts</a> <a href="#" class="item"><i
+			My Profile</a> <a th:href="@{/user/show-contacts/0}" class="item"><i class="fas fa-id-card-alt"></i>
+			View Contacts</a> <a th:href="@{/user/add-contact}" href="" class="item"><i
+			class="fas fa-user-plus"></i> Add Contacts</a> <a href="#" class="item"><i
 			class="fas fa-user-cog"></i> Settings</a> <a href="/logout" class="item"><i
 			class="fas fa-sign-out-alt"></i> Logout</a>
 		<div class="divider"></div>
@@ -96,7 +96,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
-	<script th:src="@{js/script.js}"></script>
+	<script th:src="@{/js/script.js}"></script>
 
 
 </body>
