--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -23,3 +23,66 @@ body {
 .my-card {
 	padding: 20px;
 }
+
+/* sidebar style */
+@media only screen and (max-width:600px) {
+	.sidebar {
+		display: none;
+		width: 80% !important;
+		background: white;
+		height: 100%;
+		position: fixed;
+		padding-top: 20px;
+		margin-top: 40px !important;
+	}
+	.content {
+		margin-left: 0% important;;
+	}
+}
+
+.sidebar {
+	width: 18%;
+	background: white;
+	height: 100%;
+	position: fixed;
+	padding-top: 45px;
+	z-index: 1000;
+}
+
+.sidebar a {
+	display: block;
+	width: 100%;
+	padding: 10px 25px;
+	text-decoration: none;
+	color: gray;
+}
+
+.sidebar a:hover {
+	background: #e2e2e2;
+}
+
+/* .sidebar .divider {
+	height: .5px;
+	width: 100%;
+	background: #e2e2e2;
+	margin-top: 10px;
+} */
+.sidebar .crossBtn {
+	position: absolute;
+	top: 17px;
+	right: 21px;
+	font-size: 23px;
+	text-align: right;
+	cursor: pointer;
+}
+
+.content {
+	margin-left: 20%;
+	margin-top: 4%;
+}
+
+/* disable card bg for add contact page*/
+.user_section {
+	background: rgba(0, 0, 0, 0);
+	border: none;
+}
