--- a/src/main/resources/templates/normal/show_contact_details.html
+++ b/src/main/resources/templates/normal/show_contact_details.html
@@ -41,6 +41,11 @@
 						<span th:utext="${contact.description}"></span> <i
 							class="fas fa-quote-right"></i>
 					</div>
+					<div class="container text-center btn-group mt-3 contact_action">
+						<button type="submit" class="btn text-white "
+							style="background: #40bf80">Update</button>
+						<button type="reset" class="btn bg-delete text-white resetBtn">Delete</button>
+					</div>
 				</div>
 			</div>
 	</section>
