--- a/src/main/resources/templates/page_not_found.html
+++ b/src/main/resources/templates/page_not_found.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-	th:fragment="layout(content)">
 <head>
 <!-- Required meta tags -->
 <meta charset="utf-8">
@@ -23,7 +22,7 @@
 <link rel="stylesheet" th:href="@{/css/style.css}" />
 <title th:text="${pageTitle}"></title>
 </head>
-<body>
+<body style="background: white !important;">
 
 	<!-- navbar -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-light bg-primary">
@@ -55,8 +54,10 @@
 	</nav>
 	<!-- end of navbar -->
 
-	<div th:replace="${content}"></div>
-	<!-- Optional JavaScript; choose one of the two! -->
+	<div class="container text-center">
+		<img alt="404 ERROR : PAGE NOT FOUND"
+			src="/images/page-not-found.jpeg" style="height: 625px;">
+	</div>
 
 	<!-- Option 1: Bootstrap Bundle with Popper -->
 	<script
@@ -64,12 +65,7 @@
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 		crossorigin="anonymous"></script>
 
-	<!-- Option 2: Separate Popper and Bootstrap JS -->
-	<!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-	<script th:src="@{js/script.js}"></script>
+	<script th:src="@{/js/script.js}"></script>
 
 </body>
 </html>
