--- a/src/main/resources/templates/normal/show_contact_details.html
+++ b/src/main/resources/templates/normal/show_contact_details.html
@@ -15,27 +15,31 @@
 						th:src="@{'/images/contact/'+${contact.image}}"> <img
 						th:unless="${contact.image}" class="contacts_photo profile_view"
 						alt="profile photo" src="/images/default_profile_photo.png">
-					<h1 th:text="${contact.name}"></h1>
+					<h2>
+						<span th:text="${contact.name}"></span> (<span
+							th:text="${contact.nickName}"></span>)
+					</h2>
 
 					<!-- contact details -->
 					<table class="table contact_details">
 						<tbody>
-							<tr>
+							<tr th:if="${contact.name !=''}">
 								<td scope="row"><i class="fas fa-envelope fa-custom"></i></td>
-								<td><span th:text="${contact.name}"></span></td>
+								<td><span th:text="${contact.email}"></span></td>
 							</tr>
-							<tr>
+							<tr th:if="${contact.phone !=''}">
 								<td scope="row"><i class="fas fa-phone-alt fa-custom"></i></td>
 								<td><span th:text="${contact.phone}"></span></td>
 							</tr>
-							<tr>
+							<tr th:if="${contact.work !=''}">
 								<td scope="row"><i class="fas fa-briefcase fa-custom"></i></td>
 								<td><span th:text="${contact.work}"></span></td>
 							</tr>
 						</tbody>
 					</table>
 
-					<div class="container description bg-light">
+					<div class="container description bg-light"
+						th:if="${contact.description != ''}">
 						<i class="fas fa-quote-left"></i>
 						<!-- <p th:utext="${contact.description}"></p> -->
 						<span th:utext="${contact.description}"></span> <i
@@ -44,10 +48,11 @@
 					<div class="container text-center btn-group mt-3 contact_action">
 						<button type="submit" class="btn text-white "
 							style="background: #40bf80">Update</button>
-						<button type="reset" class="btn bg-delete text-white resetBtn">Delete</button>
+						<button type="reset"  th:onclick="|deleteContact(${contact.cId})|" class="btn bg-delete text-white resetBtn">Delete</button>
 					</div>
 				</div>
 			</div>
+		</div>
 	</section>
 
 </body>
