--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -14,6 +14,10 @@ body {
 	background: #f78f66 !important;
 }
 
+.bg-edit {
+	background: #40bf80 !important;
+}
+
 .banner {
 	width: 100%;
 	height: 102vh;
@@ -21,7 +25,7 @@ body {
 		url(../images/banner-img.jpg);
 	color: white;
 	background-size: cover;
-	margin-top: -9vh;
+	margin-top: -5%;
 }
 
 .my-card {
@@ -146,4 +150,17 @@ table {
 .contact_action {
 	padding-left: 17%;
 	padding-right: 17%;
+}
+
+/* show contacts update and delete button */
+.fa-trash-alt, .fa-user-edit {
+	cursor: pointer;
+}
+
+.fa-trash-alt {
+	color: #FF3A00;
+}
+
+.fa-user-edit {
+	color: #5F5F83;
 }
