--- a/src/main/resources/templates/normal/show_contacts.html
+++ b/src/main/resources/templates/normal/show_contacts.html
@@ -10,10 +10,10 @@
 	<section>
 		<div class="card user_section">
 			<div class="card-body">
+				<div th:replace="alert::alertSection"></div>
 				<img style="width: 50px" class="mx-auto d-block"
 					src="/images/add-contact.png">
 
-				<div th:replace="alert::alertSection"></div>
 
 				<h1 class="text-center mb-3">My Contacts</h1>
 
@@ -39,15 +39,15 @@
 										class="contacts_photo" src="/images/default_profile_photo.png">
 										<span th:text="${'C'+c.cId}"></span></th>
 									<td th:text="${c.name}">Mark</td>
-									<td><a
-										th:href="@{'/user/'+${c.cId}+'/contact-details'}"> <span
-											th:text="${c.email}"></span>
+									<td><a th:href="@{'/user/'+${c.cId}+'/contact-details'}">
+											<span th:text="${c.email}"></span>
 									</a></td>
 									<td th:text="${c.phone}">+919123456789</td>
 									<td>
 										<div class="container">
-											<i class="fas fa-trash-alt" style="margin-right: 6px;"></i> <i
-												class="fas fa-user-edit"></i>
+											<a href="#" th:onclick="|deleteContact(${c.cId})|"
+												class="fas fa-trash-alt" style="margin-right: 6px;"></a> <a
+												class="fas fa-user-edit"></a>
 										</div>
 									</td>
 								</tr>
