image deletion and updation

--- a/src/main/resources/templates/normal/contact_form.html
+++ b/src/main/resources/templates/normal/contact_form.html
@@ -54,6 +54,7 @@
 			<!-- contact image field -->
 			<div class="mb-3">
 				<input class="form-control" type="file" id="formFile"
+					th:valuetype="${contact.image}" 
 					name="profileImage">
 			</div>
 
