--- a/src/main/resources/templates/normal/update_contact_form.html
+++ b/src/main/resources/templates/normal/update_contact_form.html
@@ -23,13 +23,13 @@
 								th:action="@{/user/update-process-contact}">
 
 								<img th:if="${contact.image}" alt="profile photo"
-									class="contacts_photo  mb-3 mt-1" style="width: 55px; height: 55px;"
+									class="contacts_photo  mb-3 mt-1"
+									style="width: 55px; height: 55px;"
 									th:src="@{'/images/contact/'+${contact.image}}"> <img
 									th:unless="${contact.image}" alt="profile photo"
 									class="contacts_photo mb-3 mt-1"
 									style="width: 55px; height: 55px;"
 									src="/images/default_profile_photo.png">
-
 
 								<div th:replace="normal/contact_form::contactFormSection"></div>
 								<input th:value="${contact.cId}" type="hidden" name="cId">
